[package]
name = "ecdsa"
version = "0.17.0-rc.5"
description = """
Pure Rust implementation of the Elliptic Curve Digital Signature Algorithm
(ECDSA) as specified in FIPS 186-4 (Digital Signature Standard), providing
RFC6979 deterministic signatures as well as support for added entropy
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/signatures/tree/master/ecdsa"
repository = "https://github.com/RustCrypto/signatures"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "nist", "secp256k1", "signature"]
edition = "2024"
rust-version = "1.85"

[dependencies]
elliptic-curve = { version = "0.14.0-rc.10", default-features = false, features = ["sec1"], path = "../../../RustCrypto/traits/elliptic-curve" }
signature = { version = "3.0.0-rc.1", default-features = false, features = ["rand_core"], path = "../../../RustCrypto/traits/signature" }
zeroize = { version = "1.5", default-features = false }

# optional dependencies
der = { version = "0.8.0-rc.7", optional = true }
digest = { version = "0.11.0-rc.0", optional = true, default-features = false, features = ["oid"], path = "../../../RustCrypto/traits/digest" }
rfc6979 = { version = "0.5.0-rc.0", optional = true, path = "../../../RustCrypto/signatures/rfc6979" }
serdect = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }
sha2 = { version = "0.11.0-rc.0", optional = true, default-features = false, features = ["oid"], path = "../../../RustCrypto/hashes/sha2" }
spki = { version = "0.8.0-rc.4", optional = true, default-features = false }

[dev-dependencies]
elliptic-curve = { version = "0.14.0-rc.10", default-features = false, features = ["dev"], path = "../../../RustCrypto/traits/elliptic-curve" }
hex-literal = "1"
sha2 = { version = "0.11.0-rc.0", default-features = false, path = "../../../RustCrypto/hashes/sha2" }

[features]
default = ["digest"]
alloc = ["elliptic-curve/alloc", "signature/alloc", "spki/alloc"]
std = ["alloc", "elliptic-curve/std"]

arithmetic = ["elliptic-curve/arithmetic"]
dev = ["arithmetic", "digest", "elliptic-curve/dev", "hazmat"]
digest = ["dep:digest", "elliptic-curve/digest", "signature/digest"]
hazmat = []
pkcs8 = ["digest", "elliptic-curve/pkcs8", "der"]
pem = ["elliptic-curve/pem", "pkcs8"]
serde = ["elliptic-curve/serde", "pkcs8", "serdect"]
signing = ["arithmetic", "digest", "hazmat", "rfc6979"]
verifying = ["arithmetic", "digest", "hazmat"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
